Numerics: Extended functionality and fixed issues in Calculator. Added absolute extrema, fraction, factorial and Gamma function calculation methods to Calculator. Fixed issues in trigonometry and common value calculation methods. Added unit tests for all methods in Calculator.

--- a/src/Tests.Numerics/Tests.Numerics.csproj
+++ b/src/Tests.Numerics/Tests.Numerics.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CalculatorTest.cs" />
     <Compile Include="LinearAlgebra\CholeskyDecompositionTest.cs" />
     <Compile Include="LinearAlgebra\HouseholderTransformationTest.cs" />
     <Compile Include="LinearAlgebra\LUDecompositionTest.cs" />
