Collections: Added multi-value dictionary.

--- a/src/Collections/Collections.csproj
+++ b/src/Collections/Collections.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Collection.cs" />
     <Compile Include="Heap.cs" />
     <Compile Include="IHeap.cs" />
+    <Compile Include="MultiValueDictionary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadOnlySet.cs" />
     <Compile Include="Resources\Messages.Designer.cs">
