--- a/src/Tests.Collections/Tests.Collections.csproj
+++ b/src/Tests.Collections/Tests.Collections.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HeapTest.cs" />
+    <Compile Include="MultiValueDictionaryTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadOnlySetTest.cs" />
     <Compile Include="SearchTree\AvlTreeTest.cs" />
