--- a/src/Collections/Collections.csproj
+++ b/src/Collections/Collections.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Collection.cs" />
+    <Compile Include="FibonacciHeap.cs" />
     <Compile Include="Heap.cs" />
     <Compile Include="IHeap.cs" />
     <Compile Include="MultiValueDictionary.cs" />
@@ -56,6 +57,7 @@
     <Compile Include="SearchTree\ISearchTree.cs" />
     <Compile Include="SearchTree\ISearchTreeEnumerator.cs" />
     <Compile Include="SearchTree\RedBlackTree.cs" />
+    <Compile Include="SparseArray.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\Messages.resx">
