Core: Added proxy version of basic line string and polygon. Proxy versions enable performance increase, as they do not require copying existing coordinate lists. They can be used to represent the result of different algorithms.

--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -68,6 +68,8 @@
     <Compile Include="BasicLineString.cs" />
     <Compile Include="BasicPoint.cs" />
     <Compile Include="BasicPolygon.cs" />
+    <Compile Include="BasicProxyLineString.cs" />
+    <Compile Include="BasicProxyPolygon.cs" />
     <Compile Include="Coordinate.cs" />
     <Compile Include="CoordinateComparer.cs" />
     <Compile Include="CoordinateVector.cs" />
