Core: Added Minkowski-sum algorithm. The Minkowski-sum algorithm is used for buffering geometries (with a specificy range of another geometry).

--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Algorithms\Intersection.cs" />
     <Compile Include="Algorithms\IntersectionType.cs" />
     <Compile Include="Algorithms\LineAlgorithms.cs" />
+    <Compile Include="Algorithms\MinkowskiSumAlgorithm.cs" />
     <Compile Include="Algorithms\PolygonAlgorithms.cs" />
     <Compile Include="Algorithms\PolygonCentroidAlgorithm.cs" />
     <Compile Include="Algorithms\ShamosHoeyAlgorithm.cs" />
