--- a/src/Tests.Core/Tests.Core.csproj
+++ b/src/Tests.Core/Tests.Core.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Algorithms\GrahamScanAlgorithmTest.cs" />
     <Compile Include="Algorithms\GreinerHormannAlgorithmTest.cs" />
     <Compile Include="Algorithms\LineAlgorithmsTest.cs" />
+    <Compile Include="Algorithms\MinkowskiSumAlgorithmTest.cs" />
     <Compile Include="Algorithms\PolygonAlgorithmsTest.cs" />
     <Compile Include="Algorithms\PolygonCentroidAlgorithmTest.cs" />
     <Compile Include="Algorithms\ShamosHoeyAlgorithmTest.cs" />
