Core: Added support for SFA geometries. Added interfaces and implementation of SFA geometries. Added interface for reference systems. Added interface and implementation of factories (generic and geometry specific). Fixed some comments in basic geometries.

--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -75,11 +75,44 @@
     <Compile Include="CoordinateComparer.cs" />
     <Compile Include="CoordinateVector.cs" />
     <Compile Include="Envelope.cs" />
+    <Compile Include="Factory.cs" />
+    <Compile Include="Geometries\Curve.cs" />
+    <Compile Include="Geometries\Geometry.cs" />
+    <Compile Include="Geometries\GeometryFactory.cs" />
+    <Compile Include="Geometries\GeometryList.cs" />
+    <Compile Include="Geometries\Line.cs" />
+    <Compile Include="Geometries\LinearRing.cs" />
+    <Compile Include="Geometries\LineString.cs" />
+    <Compile Include="Geometries\MultiLineString.cs" />
+    <Compile Include="Geometries\MultiPoint.cs" />
+    <Compile Include="Geometries\MultiPolygon.cs" />
+    <Compile Include="Geometries\Point.cs" />
+    <Compile Include="Geometries\Polygon.cs" />
+    <Compile Include="Geometries\Surface.cs" />
+    <Compile Include="Geometries\Triangle.cs" />
     <Compile Include="IBasicGeometry.cs" />
     <Compile Include="IBasicLineString.cs" />
     <Compile Include="IBasicPoint.cs" />
     <Compile Include="IBasicPolygon.cs" />
+    <Compile Include="ICurve.cs" />
     <Compile Include="IdentifiedObject.cs" />
+    <Compile Include="IFactory.cs" />
+    <Compile Include="IGeometry.cs" />
+    <Compile Include="IGeometryCollection.cs" />
+    <Compile Include="IGeometryFactory.cs" />
+    <Compile Include="ILine.cs" />
+    <Compile Include="ILinearRing.cs" />
+    <Compile Include="ILineString.cs" />
+    <Compile Include="IMultiCurve.cs" />
+    <Compile Include="IMultiLineString.cs" />
+    <Compile Include="IMultiPoint.cs" />
+    <Compile Include="IMultiPolygon.cs" />
+    <Compile Include="IMultiSurface.cs" />
+    <Compile Include="IPoint.cs" />
+    <Compile Include="IPolygon.cs" />
+    <Compile Include="IReferenceSystem.cs" />
+    <Compile Include="ISurface.cs" />
+    <Compile Include="ITriangle.cs" />
     <Compile Include="Orientation.cs" />
     <Compile Include="PrecisionModel.cs" />
     <Compile Include="PrecisionModelType.cs" />
