Core: Added 3D R-tree and 3D R*-tree spatial indexes. Includes interface for generic spatial indexes.

--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -108,6 +108,9 @@
     <Compile Include="IMultiPoint.cs" />
     <Compile Include="IMultiPolygon.cs" />
     <Compile Include="IMultiSurface.cs" />
+    <Compile Include="Indexes\ISpatialIndex.cs" />
+    <Compile Include="Indexes\Rectangle\RStarTree.cs" />
+    <Compile Include="Indexes\Rectangle\RTree.cs" />
     <Compile Include="IPoint.cs" />
     <Compile Include="IPolygon.cs" />
     <Compile Include="IReferenceSystem.cs" />
