--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -46,11 +46,13 @@
   <ItemGroup>
     <Compile Include="Algorithms\BentleyFaustPreparataAlgorithm.cs" />
     <Compile Include="Algorithms\BentleyOttmannAlgorithm.cs" />
+    <Compile Include="Algorithms\CohenSutherlandAlgorithm.cs" />
     <Compile Include="Algorithms\DouglasPeuckerAlgorithm.cs" />
     <Compile Include="Algorithms\GrahamScanAlgorithm.cs" />
     <Compile Include="Algorithms\GreinerHormannAlgorithm.cs" />
     <Compile Include="Algorithms\Intersection.cs" />
     <Compile Include="Algorithms\IntersectionType.cs" />
+    <Compile Include="Algorithms\LiangBarskyAlgorithm.cs" />
     <Compile Include="Algorithms\LineAlgorithms.cs" />
     <Compile Include="Algorithms\MinkowskiSumAlgorithm.cs" />
     <Compile Include="Algorithms\PolygonAlgorithms.cs" />
