Core: Added Monotone subdivision algorithm.

--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Algorithms\LiangBarskyAlgorithm.cs" />
     <Compile Include="Algorithms\LineAlgorithms.cs" />
     <Compile Include="Algorithms\MinkowskiSumAlgorithm.cs" />
+    <Compile Include="Algorithms\MonotoneSubdivisionAlgorithm.cs" />
     <Compile Include="Algorithms\PolygonAlgorithms.cs" />
     <Compile Include="Algorithms\PolygonCentroidAlgorithm.cs" />
     <Compile Include="Algorithms\RandomPolygonGenerator.cs" />
