--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Algorithms\BentleyOttmannAlgorithm.cs" />
     <Compile Include="Algorithms\CohenSutherlandAlgorithm.cs" />
     <Compile Include="Algorithms\DouglasPeuckerAlgorithm.cs" />
+    <Compile Include="Algorithms\GeometryDistanceAlgorithm.cs" />
     <Compile Include="Algorithms\GrahamScanAlgorithm.cs" />
     <Compile Include="Algorithms\GreinerHormannAlgorithm.cs" />
     <Compile Include="Algorithms\Intersection.cs" />
