Core: Added interfaces for reference collections. Reference collections allow uniform access to any source of reference data specified according to OGC SRC.

--- a/src/Core.Reference/Core.Reference.csproj
+++ b/src/Core.Reference/Core.Reference.csproj
@@ -47,6 +47,10 @@
     <Compile Include="Angles.cs" />
     <Compile Include="AreaOfUse.cs" />
     <Compile Include="AxisDirection.cs" />
+    <Compile Include="Collections\ICoordinateProjectionCollection.cs" />
+    <Compile Include="Collections\ICoordinateSystemAxisCollection.cs" />
+    <Compile Include="Collections\ICoordinateTransformationCollection.cs" />
+    <Compile Include="Collections\IReferenceCollection.cs" />
     <Compile Include="CompoundCoordinateOperationMethod.cs" />
     <Compile Include="CompoundReferenceSystem.cs" />
     <Compile Include="CoordinateConversion.cs" />
