--- a/src/Core.Reference/Core.Reference.csproj
+++ b/src/Core.Reference/Core.Reference.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Collections\ICoordinateSystemAxisCollection.cs" />
     <Compile Include="Collections\ICoordinateTransformationCollection.cs" />
     <Compile Include="Collections\IReferenceCollection.cs" />
+    <Compile Include="Collections\ReferenceCollectionQueries.cs" />
     <Compile Include="CompoundCoordinateOperationMethod.cs" />
     <Compile Include="CompoundReferenceSystem.cs" />
     <Compile Include="CoordinateConversion.cs" />
