--- a/src/Core.Reference/Core.Reference.csproj
+++ b/src/Core.Reference/Core.Reference.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Collections\ICoordinateTransformationCollection.cs" />
     <Compile Include="Collections\IReferenceCollection.cs" />
     <Compile Include="Collections\ReferenceCollectionQueries.cs" />
+    <Compile Include="Collections\UnitOfMeasurementCollection.cs" />
     <Compile Include="CompoundCoordinateOperationMethod.cs" />
     <Compile Include="CompoundReferenceSystem.cs" />
     <Compile Include="CoordinateConversion.cs" />
