Core: Added various EPSG coordinate operation formula.

--- a/src/Core.Reference/Core.Reference.csproj
+++ b/src/Core.Reference/Core.Reference.csproj
@@ -47,6 +47,80 @@
     <Compile Include="Angles.cs" />
     <Compile Include="AreaOfUse.cs" />
     <Compile Include="AxisDirection.cs" />
+    <Compile Include="Collections\Formula\Conversions\GeocentricToTopocentricConversion.cs" />
+    <Compile Include="Collections\Formula\Conversions\Geographic3DTo2DConversion.cs" />
+    <Compile Include="Collections\Formula\Conversions\GeographicToGeocentricConversion.cs" />
+    <Compile Include="Collections\Formula\Conversions\GeographicToTopocentricConversion.cs" />
+    <Compile Include="Collections\Formula\CoordinateOperationMethods.cs" />
+    <Compile Include="Collections\Formula\CoordinateOperationParameters.cs" />
+    <Compile Include="Collections\Formula\Projections\AlbersEqualAreaProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\AmericanPolyconicProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\BonneProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\BonneSouthOrientatedProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\CassiniSoldnerProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\ColombiaUrbanProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\EquidistantCylindricalProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\EquidistantCylindricalSphericalProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\GnomonicProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\GuamProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\HotineObliqueMercatorAProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\HotineObliqueMercatorBProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\HotineObliqueMercatorProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\HyperbolicCassiniSoldnerProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\KrovakModifiedNorthOrientedProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\KrovakModifiedProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\KrovakNorthOrientedProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\KrovakProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\LabordeObliqueMercatorProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\LambertAzimuthalEqualAreaProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\LambertAzimuthalEqualAreaSphericalProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\LambertConicConformal1SPProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\LambertConicConformal1SPWestOrientatedProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\LambertConicConformal2SPBelgiumProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\LambertConicConformal2SPMichiganProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\LambertConicConformal2SPProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\LambertConicConformalProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\LambertConicNearConformalProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\LambertCylindricalEqualAreaEllipsoidalProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\LambertCylindricalEqualAreaSphericalProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\MercatorAProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\MercatorBProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\MercatorProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\MercatorSphericalProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\ModifiedAzimuthalEquidistantProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\ObliqueMercatorProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\ObliqueStereographicProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\OrthographicProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\PolarStereographicAProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\PolarStereographicBProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\PolarStereographicCProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\PolarStereographicProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\PopularVisualisationPseudoMercatorProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\PseudoPlateCareeProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\SinusoidalProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\TransverseMercatorProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\TransverseMercatorSouthProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\TransverseMercatorZonedProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\VerticalPerspectiveOrthographicProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\VerticalPerspectiveProjection.cs" />
+    <Compile Include="Collections\Formula\Projections\WorldMillerCylindricalProjection.cs" />
+    <Compile Include="Collections\Formula\Transformations\AffineParametricTransformation.cs" />
+    <Compile Include="Collections\Formula\Transformations\CoordinateFrameRotation.cs" />
+    <Compile Include="Collections\Formula\Transformations\GeneralPolynomial2Transformation.cs" />
+    <Compile Include="Collections\Formula\Transformations\GeneralPolynomial3Transformation.cs" />
+    <Compile Include="Collections\Formula\Transformations\GeneralPolynomial4Transformation.cs" />
+    <Compile Include="Collections\Formula\Transformations\GeneralPolynomial6Transformation.cs" />
+    <Compile Include="Collections\Formula\Transformations\GeneralPolynomialTransformation.cs" />
+    <Compile Include="Collections\Formula\Transformations\GeocentricTranslation.cs" />
+    <Compile Include="Collections\Formula\Transformations\GeographicTranslation.cs" />
+    <Compile Include="Collections\Formula\Transformations\HelmertTransformation.cs" />
+    <Compile Include="Collections\Formula\Transformations\MolodenskyBadekasTransformation.cs" />
+    <Compile Include="Collections\Formula\Transformations\MolodenskyTransformation.cs" />
+    <Compile Include="Collections\Formula\Transformations\P6LeftHandedSeismicBinGridTransformation.cs" />
+    <Compile Include="Collections\Formula\Transformations\P6RightHandedSeismicBinGridTransformation.cs" />
+    <Compile Include="Collections\Formula\Transformations\P6SeismicBinGridTransformation.cs" />
+    <Compile Include="Collections\Formula\Transformations\PositionVectorTransformation.cs" />
+    <Compile Include="Collections\Formula\Transformations\SimilarityTransformation.cs" />
     <Compile Include="Collections\ICoordinateProjectionCollection.cs" />
     <Compile Include="Collections\ICoordinateSystemAxisCollection.cs" />
     <Compile Include="Collections\ICoordinateTransformationCollection.cs" />
