Core: Added coordinate operation method and parameter collections.

--- a/src/Core.Reference/Core.Reference.csproj
+++ b/src/Core.Reference/Core.Reference.csproj
@@ -47,6 +47,8 @@
     <Compile Include="Angles.cs" />
     <Compile Include="AreaOfUse.cs" />
     <Compile Include="AxisDirection.cs" />
+    <Compile Include="Collections\CoordinateOperationMethodCollection.cs" />
+    <Compile Include="Collections\CoordinateOperationParameterCollection.cs" />
     <Compile Include="Collections\Formula\Conversions\GeocentricToTopocentricConversion.cs" />
     <Compile Include="Collections\Formula\Conversions\Geographic3DTo2DConversion.cs" />
     <Compile Include="Collections\Formula\Conversions\GeographicToGeocentricConversion.cs" />
