--- a/src/Core.Reference/Core.Reference.csproj
+++ b/src/Core.Reference/Core.Reference.csproj
@@ -127,6 +127,24 @@
     <Compile Include="Collections\ICoordinateSystemAxisCollection.cs" />
     <Compile Include="Collections\ICoordinateTransformationCollection.cs" />
     <Compile Include="Collections\IReferenceCollection.cs" />
+    <Compile Include="Collections\Local\LocalCompoundReferenceSystemCollection.cs" />
+    <Compile Include="Collections\Local\LocalCoordinateProjectionCollection.cs" />
+    <Compile Include="Collections\Local\LocalCoordinateReferenceSystemCollection.cs" />
+    <Compile Include="Collections\Local\LocalCoordinateSystemAxisCollection.cs" />
+    <Compile Include="Collections\Local\LocalCoordinateSystemCollection.cs" />
+    <Compile Include="Collections\Local\LocalCoordinateTransformationCollection.cs" />
+    <Compile Include="Collections\Local\LocalDatumCollection.cs" />
+    <Compile Include="Collections\Local\LocalEllipsoidCollection.cs" />
+    <Compile Include="Collections\Local\LocalGeocentricCoordinateReferenceSystemCollection.cs" />
+    <Compile Include="Collections\Local\LocalGeodeticDatumCollection.cs" />
+    <Compile Include="Collections\Local\LocalGeographicCoordinateReferenceSystemCollection.cs" />
+    <Compile Include="Collections\Local\LocalAreaOfUseCollection.cs" />
+    <Compile Include="Collections\Local\LocalReferenceCollection.cs" />
+    <Compile Include="Collections\Local\LocalMeridianCollection.cs" />
+    <Compile Include="Collections\Local\LocalProjectedCoordinateReferenceSystemCollection.cs" />
+    <Compile Include="Collections\Local\LocalReferenceSystemCollection.cs" />
+    <Compile Include="Collections\Local\LocalVerticalCoordinateReferenceSystemCollection.cs" />
+    <Compile Include="Collections\Local\LocalVerticalDatumCollection.cs" />
     <Compile Include="Collections\ReferenceCollectionQueries.cs" />
     <Compile Include="Collections\UnitOfMeasurementCollection.cs" />
     <Compile Include="CompoundCoordinateOperationMethod.cs" />
@@ -189,6 +207,20 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Messages.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Alias.txt" />
+    <EmbeddedResource Include="Resources\Area.txt" />
+    <EmbeddedResource Include="Resources\ConcatenatedCoordinateOperation.txt" />
+    <EmbeddedResource Include="Resources\CoordinateOperation.txt" />
+    <EmbeddedResource Include="Resources\CoordinateOperationParameterValue.txt" />
+    <EmbeddedResource Include="Resources\CoordinateReferenceSystem.txt" />
+    <EmbeddedResource Include="Resources\CoordinateSystem.txt" />
+    <EmbeddedResource Include="Resources\CoordinateSystemAxis.txt" />
+    <EmbeddedResource Include="Resources\CoordinateSystemAxisMapping.txt" />
+    <EmbeddedResource Include="Resources\Datum.txt" />
+    <EmbeddedResource Include="Resources\Ellipsoid.txt" />
+    <EmbeddedResource Include="Resources\PrimeMeridian.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
