Core: Added reference system factory and implementation.

--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -130,6 +130,7 @@
     <Compile Include="IPoint.cs" />
     <Compile Include="IPolygon.cs" />
     <Compile Include="IReferenceSystem.cs" />
+    <Compile Include="IReferenceSystemFactory.cs" />
     <Compile Include="ISurface.cs" />
     <Compile Include="ITriangle.cs" />
     <Compile Include="Orientation.cs" />
