--- a/src/Core.Reference/Core.Reference.csproj
+++ b/src/Core.Reference/Core.Reference.csproj
@@ -178,6 +178,7 @@
     <Compile Include="ProjectedCoordinateReferenceSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReferenceSystem.cs" />
+    <Compile Include="ReferenceSystemFactory.cs" />
     <Compile Include="ReferenceSystemType.cs" />
     <Compile Include="Resources\Messages.Designer.cs">
       <AutoGen>True</AutoGen>
