Core: Added strategies for converting coordinates between reference systems. The ICoordinateOperationStrategy interface encapsulates functionality of various operations, including converting between geographic and Cartesian coordinates. The CoordinateOperationStrategyFactory type creates strategies based on the specified source and target reference systems using the specified collections.

--- a/src/Core.Reference/Core.Reference.csproj
+++ b/src/Core.Reference/Core.Reference.csproj
@@ -185,6 +185,22 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Messages.resx</DependentUpon>
     </Compile>
+    <Compile Include="Strategies\CompoundCoordinateConversionStrategy.cs" />
+    <Compile Include="Strategies\CoordinateConversionStrategy.cs" />
+    <Compile Include="Strategies\ForwardGeographicCoordinateTransformationStrategy.cs" />
+    <Compile Include="Strategies\ForwardLatLonCoordinateInterpretationStrategy.cs" />
+    <Compile Include="Strategies\ForwardLatLonHiCoordinateIntepretationStrategy.cs" />
+    <Compile Include="Strategies\ForwardLonLatCoordinateIntepretationStrategy.cs" />
+    <Compile Include="Strategies\ForwardLonLatHiCoordinateInterpretationStrategy.cs" />
+    <Compile Include="Strategies\ForwardCoordinateProjectionStrategy.cs" />
+    <Compile Include="Strategies\ICoordinateOperationStrategy.cs" />
+    <Compile Include="Strategies\ReverseGeographicCoordinateTransformationStrategy.cs" />
+    <Compile Include="Strategies\ReverseLatLonCoordinateInterpretationStrategy.cs" />
+    <Compile Include="Strategies\ReverseLatLonHiCoordinateInterpretationStrategy.cs" />
+    <Compile Include="Strategies\ReverseLonLatCoordinateIntepretationStrategy.cs" />
+    <Compile Include="Strategies\ReverseLonLatHiCoordinateInterpretationStrategy.cs" />
+    <Compile Include="Strategies\ReverseCoordinateProjectionStrategy.cs" />
+    <Compile Include="Strategies\CoordinateOperationStrategyFactory.cs" />
     <Compile Include="UnitOfMeasurement.cs" />
     <Compile Include="UnitQuantityType.cs" />
     <Compile Include="UnitsOfMeasurement.cs" />
