--- a/src/Storage/Storage.csproj
+++ b/src/Storage/Storage.csproj
@@ -63,6 +63,13 @@
     <Compile Include="IGeometryDriver.cs" />
     <Compile Include="IReferenceSystemDriver.cs" />
     <Compile Include="IStorageAuthentication.cs" />
+    <Compile Include="IStoredAttributeCollection.cs" />
+    <Compile Include="IStoredAttributeCollectionFactory.cs" />
+    <Compile Include="IStoredFeature.cs" />
+    <Compile Include="IStoredFeatureCollection.cs" />
+    <Compile Include="IStoredFeatureFactory.cs" />
+    <Compile Include="IStoredGeometry.cs" />
+    <Compile Include="IStoredGeometryFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\Messages.Designer.cs">
       <AutoGen>True</AutoGen>
